exercises/Knowledge/3.1.19/README.md
# JQR 3.7.3


This exercise validates JQR item 3.1.19

```
title: Describe how and when bitwise operators are used
condition: A
standard: B
sub_items:
  3.1.19.a: and (&)
  3.1.19.b: or (|)
  3.1.19.c: xor (^)
  3.1.19.d: bitwise complement (~)
  3.1.19.e: shift left (<<)
  3.1.19.f: shift right (>>)
```

## Instructions

### Complete the exercise

To complete these exercises, upload a JQR item (3.x.x.x.jqr) to the web quiz here: https://17d.cybbh.io/bolc/public/web-quiz/

When you complete an item, download and save the `*.response.yaml` file in this same folder. Then commit the change to GitLab.

### Commit the exercise

```
git add *response.yaml
git commit
git push
```

## CI Pipeline

Note: if your CI pipeline does not run when you commit, please ensure you have made a merge request to merge
your branch into the primary branch. This will trigger the rules for the CI Job configured for this item.

