exercises/Knowledge/3.1.23/README.md
# JQR 3.1.23

```

This exercise validates JQR item 3.1.23

* title: 'Describe the concepts and terminology associated with multi-threaded programs:'
* condition: B
* standard: B
* sub_items:
  - 3.1.23.a: thread
  - 3.1.23.b: pthread
  - 3.1.23.c: fork
  - 3.1.23.d: join
  - 3.1.23.e: create
  - 3.1.23.f: exit
  - 3.1.23.g: detach
  - 3.1.23.h: self
  - 3.1.23.i: mutex
  - 3.1.23.j: semaphore
  - 3.1.23.k: race condition
  - 3.1.23.l: deadlock
  - 3.1.23.m: thread safe
  - 3.1.23.n: thread id

```

## Instructions

### Complete the exercise

To complete these exercises, upload a JQR item (3.x.x.x.jqr) to the web quiz here: https://17d.cybbh.io/bolc/public/web-quiz/

When you complete an item, download and save the `*.response.yaml` file in this same folder. Then commit the change to GitLab.

### Commit the exercise

```
git add *response.yaml
git commit
git push
```

## CI Pipeline

Note: if your CI pipeline does not run when you commit, please ensure you have made a merge request to merge
your branch into the primary branch. This will trigger the rules for the CI Job configured for this item.



### Resources

- Multithreaded Programming (POSIX pthreads Tutorial)
https://randu.org/tutorials/threads/

- POSIX Threads Programming
https://computing.llnl.gov/tutorials/pthreads/

- Linux man-pages
